--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@
                 </ul>
             </section>
         </div>
+        <!--Чим ми займаємося-->
+        <span>
+            <h3>Чим ми займаємося</h3>
+        </span>
+        <img src="/img/box1.png" alt="Чоловік працює на робочому місці з планшетом та клавіатурою">
+        <img src="/img/box 2.png" alt="Дівчина працює зі смартфоном та ноутбуком">
+        <img src="/img/box 3.png" alt="Дівчина працює з iPad та iMac">
     </main>
 </body>
 
