--- a/index.html
+++ b/index.html
@@ -59,10 +59,9 @@
         <span>
             <h3>Чим ми займаємося</h3>
         </span>
-        <img src="/img/box1.png" alt="Чоловік працює на робочому місці з планшетом та клавіатурою" width="370px"
-            height="294px">
-        <img src="/img/box 2.png" alt="Дівчина працює зі смартфоном та ноутбуком" width="370px" height="294px">
-        <img src="/img/box 3.png" alt="Дівчина працює з iPad та iMac" width="370px" height="294px">
+        <img src="/img/box_1.jpg" alt="Чоловік працює на робочому місці з планшетом та клавіатурою" width="370px">
+        <img src="/img/box_2.jpg" alt="Дівчина працює зі смартфоном та ноутбуком" width="370px">
+        <img src="/img/box_3.jpg" alt="Дівчина працює з iPad та iMac" width="370px">
     </main>
 </body>
 
