--- a/index.html
+++ b/index.html
@@ -56,9 +56,7 @@
             </section>
         </div>
         <!--Чим ми займаємося-->
-        <span>
-            <h3>Чим ми займаємося</h3>
-        </span>
+        <h3><span>Чим ми займаємося</span></h3>
         <img src="/img/box_1.jpg" alt="Чоловік працює на робочому місці з планшетом та клавіатурою" width="370px">
         <img src="/img/box_2.jpg" alt="Дівчина працює зі смартфоном та ноутбуком" width="370px">
         <img src="/img/box_3.jpg" alt="Дівчина працює з iPad та iMac" width="370px">
