--- a/index.html
+++ b/index.html
@@ -56,10 +56,13 @@
             </section>
         </div>
         <!--Чим ми займаємося-->
-        <h3><span>Чим ми займаємося</span></h3>
-        <img src="/img/box_1.jpg" alt="Чоловік працює на робочому місці з планшетом та клавіатурою" width="370px">
-        <img src="/img/box_2.jpg" alt="Дівчина працює зі смартфоном та ноутбуком" width="370px">
-        <img src="/img/box_3.jpg" alt="Дівчина працює з iPad та iMac" width="370px">
+        <h2><span>Чим ми займаємося</span></h2>
+        <ul>
+            <li><img src="/img/box_1.jpg" alt="Чоловік працює на робочому місці з планшетом та клавіатурою"
+                    width="370px"></li>
+            <li><img src="/img/box_2.jpg" alt="Дівчина працює зі смартфоном та ноутбуком" width="370px"></li>
+            <li><img src="/img/box_3.jpg" alt="Дівчина працює з iPad та iMac" width="370px"></li>
+        </ul>
     </main>
 </body>
 
