--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div>
             <section>
                 <h1>Ефективні рішення для вашого бізнесу</h1>
-                <a href="">Замовити послугу</a>
+                <button>Замовити послугу</button>
             </section>
         </div>
         <!--Особливості-->
@@ -58,10 +58,10 @@
         <!--Чим ми займаємося-->
         <h2><span>Чим ми займаємося</span></h2>
         <ul>
-            <li><img src="/img/box_1.jpg" alt="Чоловік працює на робочому місці з планшетом та клавіатурою"
-                    width="370px"></li>
-            <li><img src="/img/box_2.jpg" alt="Дівчина працює зі смартфоном та ноутбуком" width="370px"></li>
-            <li><img src="/img/box_3.jpg" alt="Дівчина працює з iPad та iMac" width="370px"></li>
+            <li><img src="/img/box_1.jpg" alt="Чоловік працює на робочому місці з планшетом та клавіатурою" width="370">
+            </li>
+            <li><img src="/img/box_2.jpg" alt="Дівчина працює зі смартфоном та ноутбуком" width="370"></li>
+            <li><img src="/img/box_3.jpg" alt="Дівчина працює з iPad та iMac" width="370"></li>
         </ul>
     </main>
 </body>
