--- a/index.html
+++ b/index.html
@@ -58,10 +58,11 @@
         <!--Чим ми займаємося-->
         <h2><span>Чим ми займаємося</span></h2>
         <ul>
-            <li><img src="/img/box_1.jpg" alt="Чоловік працює на робочому місці з планшетом та клавіатурою" width="370">
+            <li><img src="/images/box_1.jpg" alt="Чоловік працює на робочому місці з планшетом та клавіатурою"
+                    width="370">
             </li>
-            <li><img src="/img/box_2.jpg" alt="Дівчина працює зі смартфоном та ноутбуком" width="370"></li>
-            <li><img src="/img/box_3.jpg" alt="Дівчина працює з iPad та iMac" width="370"></li>
+            <li><img src="/images/box_2.jpg" alt="Дівчина працює зі смартфоном та ноутбуком" width="370"></li>
+            <li><img src="/images/box_3.jpg" alt="Дівчина працює з iPad та iMac" width="370"></li>
         </ul>
     </main>
 </body>
