--- a/index.html
+++ b/index.html
@@ -54,16 +54,38 @@
                     </li>
                 </ul>
             </section>
+            <!--Чим ми займаємося-->
+            <section>
+                <h2><span>Чим ми займаємося</span></h2>
+                <ul>
+                    <li><img src="./images/box_1.jpg" alt="Чоловік працює на робочому місці з планшетом та клавіатурою"
+                            width="370">
+                    </li>
+                    <li><img src="./images/box_2.jpg" alt="Дівчина працює зі смартфоном та ноутбуком" width="370"></li>
+                    <li><img src="./images/box_3.jpg" alt="Дівчина працює з iPad та iMac" width="370"></li>
+                </ul>
+            </section>
         </div>
-        <!--Чим ми займаємося-->
-        <h2><span>Чим ми займаємося</span></h2>
-        <ul>
-            <li><img src="./images/box_1.jpg" alt="Чоловік працює на робочому місці з планшетом та клавіатурою"
-                    width="370">
-            </li>
-            <li><img src="./images/box_2.jpg" alt="Дівчина працює зі смартфоном та ноутбуком" width="370"></li>
-            <li><img src="./images/box_3.jpg" alt="Дівчина працює з iPad та iMac" width="370"></li>
-        </ul>
+        <!--Наша команда-->
+        <div>
+            <section>
+                <h2><span>Наша команда</span></h2>
+                <ul>
+                    <li>
+                        <img src="./images/Igor_Demyanenko.jpg" alt="">
+                    </li>
+                    <li>
+                        <img src="./images/Olga_Repina.jpg" alt="">
+                    </li>
+                    <li>
+                        <img src="./images/Mikola_Tarasov.jpg" alt="">
+                    </li>
+                    <li>
+                        <img src="./images/Michailo_Ermakov.jpg" alt="">
+                    </li>
+                </ul>
+            </section>
+        </div>
     </main>
 </body>
 
