--- a/index.html
+++ b/index.html
@@ -69,19 +69,27 @@
         <!--Наша команда-->
         <div>
             <section>
-                <h2><span>Наша команда</span></h2>
+                <h2>Наша команда</h2>
                 <ul>
                     <li>
-                        <img src="./images/Igor_Demyanenko.jpg" alt="">
+                        <img src="./images/Igor_Demyanenko.jpg" alt="Фото молодого чоловіка" width="270">
+                        <h3>Ігор Дем'яненко</h3>
+                        <p>Product Designer</p>
                     </li>
                     <li>
-                        <img src="./images/Olga_Repina.jpg" alt="">
+                        <img src="./images/Olga_Repina.jpg" alt="Фото молодої дівчини" width="270">
+                        <h3>Ольга Рєпіна</h3>
+                        <p>Frontend Developer</p>
                     </li>
                     <li>
-                        <img src="./images/Mikola_Tarasov.jpg" alt="">
+                        <img src="./images/Mikola_Tarasov.jpg" alt="Фото молодого чоловіка" width="270">
+                        <h3>Микола Тарасов</h3>
+                        <p>Marketing</p>
                     </li>
                     <li>
-                        <img src="./images/Michailo_Ermakov.jpg" alt="">
+                        <img src="./images/Michailo_Ermakov.jpg" alt="Фото молодого чоловіка" width="270">
+                        <h3>Михайло Єрмаков</h3>
+                        <p>UI Designer</p>
                     </li>
                 </ul>
             </section>
