--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ukr">
 
 <head>
     <meta charset="UTF-8">
@@ -12,7 +12,7 @@
     <!--Верхня лінія-->
     <header>
         <nav>
-            <a href="/">WebStudio</a>
+            <a href="">WebStudio</a>
             <ul>
                 <li><a href="">Студія</a></li>
                 <li><a href="">Портфоліо</a></li>
@@ -74,27 +74,46 @@
                     <li>
                         <img src="./images/Igor_Demyanenko.jpg" alt="Фото молодого чоловіка" width="270">
                         <h3>Ігор Дем'яненко</h3>
-                        <p>Product Designer</p>
+                        <p lang="en">Product Designer</p>
                     </li>
                     <li>
                         <img src="./images/Olga_Repina.jpg" alt="Фото молодої дівчини" width="270">
                         <h3>Ольга Рєпіна</h3>
-                        <p>Frontend Developer</p>
+                        <p lang="en">Frontend Developer</p>
                     </li>
                     <li>
                         <img src="./images/Mikola_Tarasov.jpg" alt="Фото молодого чоловіка" width="270">
                         <h3>Микола Тарасов</h3>
-                        <p>Marketing</p>
+                        <p lang="en">Marketing</p>
                     </li>
                     <li>
                         <img src="./images/Michailo_Ermakov.jpg" alt="Фото молодого чоловіка" width="270">
                         <h3>Михайло Єрмаков</h3>
-                        <p>UI Designer</p>
+                        <p lang="en">UI Designer</p>
                     </li>
                 </ul>
             </section>
         </div>
     </main>
+    <footer>
+        <h3>
+            WebStudio
+        </h3>
+        <address>
+            <ul>
+                <li>
+                    <a href="https://goo.gl/maps/rFwcg6dRCZPQpMAX6">м. Київ, пр-т Лесі Українки, 26</a>
+                </li>
+                <li>
+                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li>
+                    <a href="tel:+380961111111">+38 096 111 11 11</a>
+                </li>
+            </ul>
+
+        </address>
+    </footer>
 </body>
 
 </html>
