--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ukr">
+<html lang="uk-UA">
 
 <head>
     <meta charset="UTF-8">
@@ -59,10 +59,11 @@
                 <h2><span>Чим ми займаємося</span></h2>
                 <ul>
                     <li><img src="./images/box_1.jpg" alt="Чоловік працює на робочому місці з планшетом та клавіатурою"
-                            width="370">
+                            width="370" height="294">
                     </li>
-                    <li><img src="./images/box_2.jpg" alt="Дівчина працює зі смартфоном та ноутбуком" width="370"></li>
-                    <li><img src="./images/box_3.jpg" alt="Дівчина працює з iPad та iMac" width="370"></li>
+                    <li><img src="./images/box_2.jpg" alt="Дівчина працює зі смартфоном та ноутбуком" width="370"
+                            height="294"></li>
+                    <li><img src="./images/box_3.jpg" alt="Дівчина працює з iPad та iMac" width="370" height="294"></li>
                 </ul>
             </section>
         </div>
@@ -72,33 +73,31 @@
                 <h2>Наша команда</h2>
                 <ul>
                     <li>
-                        <img src="./images/Igor_Demyanenko.jpg" alt="Фото молодого чоловіка" width="270">
+                        <img src="./images/Igor_Demyanenko.jpg" alt="Фото молодого чоловіка" width="270" height="260">
                         <h3>Ігор Дем'яненко</h3>
-                        <p lang="en">Product Designer</p>
+                        <p lang="en-UA">Product Designer</p>
                     </li>
                     <li>
-                        <img src="./images/Olga_Repina.jpg" alt="Фото молодої дівчини" width="270">
+                        <img src="./images/Olga_Repina.jpg" alt="Фото молодої дівчини" width="270" height="260">
                         <h3>Ольга Рєпіна</h3>
-                        <p lang="en">Frontend Developer</p>
+                        <p lang="en-UA">Frontend Developer</p>
                     </li>
                     <li>
-                        <img src="./images/Mikola_Tarasov.jpg" alt="Фото молодого чоловіка" width="270">
+                        <img src="./images/Mikola_Tarasov.jpg" alt="Фото молодого чоловіка" width="270" height="260">
                         <h3>Микола Тарасов</h3>
-                        <p lang="en">Marketing</p>
+                        <p lang="en-UA">Marketing</p>
                     </li>
                     <li>
-                        <img src="./images/Michailo_Ermakov.jpg" alt="Фото молодого чоловіка" width="270">
+                        <img src="./images/Michailo_Ermakov.jpg" alt="Фото молодого чоловіка" width="270" height="260">
                         <h3>Михайло Єрмаков</h3>
-                        <p lang="en">UI Designer</p>
+                        <p lang="en-UA">UI Designer</p>
                     </li>
                 </ul>
             </section>
         </div>
     </main>
     <footer>
-        <h3>
-            WebStudio
-        </h3>
+        <a href="">WebStudio</a>
         <address>
             <ul>
                 <li>
