--- a/index.html
+++ b/index.html
@@ -26,82 +26,80 @@
     </header>
     <!--Шапка-->
     <main>
-        <div>
-            <section>
-                <h1>Ефективні рішення для вашого бізнесу</h1>
-                <button>Замовити послугу</button>
-            </section>
-        </div>
+        <section>
+            <h1>Ефективні рішення для вашого бізнесу</h1>
+            <button>Замовити послугу</button>
+        </section>
         <!--Особливості-->
-        <div>
-            <section>
-                <ul>
-                    <li>
-                        <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
-                        <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
-                    </li>
-                    <li>
-                        <h2>ПУНКТУАЛЬНІСТЬ</h2>
-                        <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
-                    </li>
-                    <li>
-                        <h2>ПЛАНУВАННЯ</h2>
-                        <p>Так само консультація з широким активом значною мірою зумовлює.</p>
-                    </li>
-                    <li>
-                        <h2>СУЧАСНІ ТЕХНОЛОГІЇ</h2>
-                        <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
-                    </li>
-                </ul>
-            </section>
-            <!--Чим ми займаємося-->
-            <section>
-                <h2><span>Чим ми займаємося</span></h2>
-                <ul>
-                    <li><img src="./images/box_1.jpg" alt="Чоловік працює на робочому місці з планшетом та клавіатурою"
-                            width="370" height="294">
-                    </li>
-                    <li><img src="./images/box_2.jpg" alt="Дівчина працює зі смартфоном та ноутбуком" width="370"
-                            height="294"></li>
-                    <li><img src="./images/box_3.jpg" alt="Дівчина працює з iPad та iMac" width="370" height="294"></li>
-                </ul>
-            </section>
-        </div>
+        <section>
+            <ul>
+                <li>
+                    <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
+                    <h3>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</h3>
+                </li>
+                <li>
+                    <h2>ПУНКТУАЛЬНІСТЬ</h2>
+                    <h3>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</h3>
+                </li>
+                <li>
+                    <h2>ПЛАНУВАННЯ</h2>
+                    <h3>Так само консультація з широким активом значною мірою зумовлює.</h3>
+                </li>
+                <li>
+                    <h2>СУЧАСНІ ТЕХНОЛОГІЇ</h2>
+                    <h3>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</h3>
+                </li>
+            </ul>
+        </section>
+        <!--Чим ми займаємося-->
+        <section>
+            <h2>Чим ми займаємося</h2>
+            <ul>
+                <li><img src="./images/box_1.jpg" alt="Чоловік працює на робочому місці з планшетом та клавіатурою"
+                        width="370" height="294">
+                </li>
+                <li><img src="./images/box_2.jpg" alt="Дівчина працює зі смартфоном та ноутбуком" width="370"
+                        height="294"></li>
+                <li><img src="./images/box_3.jpg" alt="Дівчина працює з iPad та iMac" width="370" height="294"></li>
+            </ul>
+        </section>
         <!--Наша команда-->
-        <div>
-            <section>
-                <h2>Наша команда</h2>
-                <ul>
-                    <li>
-                        <img src="./images/Igor_Demyanenko.jpg" alt="Фото молодого чоловіка" width="270" height="260">
-                        <h3>Ігор Дем'яненко</h3>
-                        <p lang="en-UA">Product Designer</p>
-                    </li>
-                    <li>
-                        <img src="./images/Olga_Repina.jpg" alt="Фото молодої дівчини" width="270" height="260">
-                        <h3>Ольга Рєпіна</h3>
-                        <p lang="en-UA">Frontend Developer</p>
-                    </li>
-                    <li>
-                        <img src="./images/Mikola_Tarasov.jpg" alt="Фото молодого чоловіка" width="270" height="260">
-                        <h3>Микола Тарасов</h3>
-                        <p lang="en-UA">Marketing</p>
-                    </li>
-                    <li>
-                        <img src="./images/Michailo_Ermakov.jpg" alt="Фото молодого чоловіка" width="270" height="260">
-                        <h3>Михайло Єрмаков</h3>
-                        <p lang="en-UA">UI Designer</p>
-                    </li>
-                </ul>
-            </section>
-        </div>
+        <section>
+            <h2>Наша команда</h2>
+            <ul>
+                <li>
+                    <img src="./images/Igor_Demyanenko.jpg" alt="Фото молодого чоловіка" width="270" height="260">
+                    <h3>Ігор Дем'яненко</h3>
+                    <p lang="en">Product Designer</p>
+                </li>
+                <li>
+                    <img src="./images/Olga_Repina.jpg" alt="Фото молодої дівчини" width="270" height="260">
+                    <h3>Ольга Рєпіна</h3>
+                    <p lang="en">Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="./images/Mikola_Tarasov.jpg" alt="Фото молодого чоловіка" width="270" height="260">
+                    <h3>Микола Тарасов</h3>
+                    <p lang="en">Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/Michailo_Ermakov.jpg" alt="Фото молодого чоловіка" width="270" height="260">
+                    <h3>Михайло Єрмаков</h3>
+                    <p lang="en">UI Designer</p>
+                </li>
+            </ul>
+        </section>
+
     </main>
     <footer>
         <a href="">WebStudio</a>
         <address>
             <ul>
                 <li>
-                    <a href="https://goo.gl/maps/rFwcg6dRCZPQpMAX6">м. Київ, пр-т Лесі Українки, 26</a>
+                    <a href="https://goo.gl/maps/rFwcg6dRCZPQpMAX6" target="_blank"
+                        rel="nofollow noopener noreferrer">м. Київ,
+                        пр-т Лесі
+                        Українки, 26</a>
                 </li>
                 <li>
                     <a href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -110,7 +108,6 @@
                     <a href="tel:+380961111111">+38 096 111 11 11</a>
                 </li>
             </ul>
-
         </address>
     </footer>
 </body>
