modified:index.html

--- a/index.html
+++ b/index.html
@@ -97,9 +97,7 @@
             <ul>
                 <li>
                     <a href="https://goo.gl/maps/rFwcg6dRCZPQpMAX6" target="_blank"
-                        rel="nofollow noopener noreferrer">м. Київ,
-                        пр-т Лесі
-                        Українки, 26</a>
+                        rel="nofollow noopener noreferrer">м.Київ, пр-т Лесі Українки, 26</a>
                 </li>
                 <li>
                     <a href="mailto:info@devstudio.com">info@devstudio.com</a>
