--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Webstudio</title>
+    <title>WebStudio</title>
 </head>
 
 <body>
     <!--Верхня лінія-->
     <header>
         <nav>
-            <a href="">WebStudio</a>
+            <a href="#" lang="en"><span>Web</span>Studio</a>
             <ul>
-                <li><a href="">Студія</a></li>
-                <li><a href="">Портфоліо</a></li>
-                <li><a href="">Контакти</a></li>
+                <li><a href="#">Студія</a></li>
+                <li><a href="#">Портфоліо</a></li>
+                <li><a href="#">Контакти</a></li>
             </ul>
         </nav>
         <ul>
@@ -28,7 +28,7 @@
     <main>
         <section>
             <h1>Ефективні рішення для вашого бізнесу</h1>
-            <button>Замовити послугу</button>
+            <button type="button">Замовити послугу</button>
         </section>
         <!--Особливості-->
         <section>
@@ -84,7 +84,6 @@
                 </li>
                 <li>
                     <img src="./images/Michailo_Ermakov.jpg" alt="Фото молодого чоловіка" width="270" height="260">
-                    <h3>Михайло Єрмаков</h3>
                     <p lang="en">UI Designer</p>
                 </li>
             </ul>
