--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     </main>
     <footer>
-        <a href="">WebStudio</a>
+        <a href="#" lang="en"><span>Web</span>Studio</a>
         <address>
             <ul>
                 <li>
