--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!--Верхня лінія-->
     <header>
         <nav>
-            <a href="#" lang="en"><span>Web</span>Studio</a>
+            <a href="./index.html" lang="en"><span>Web</span>Studio</a>
             <ul>
                 <li><a href="#">Студія</a></li>
                 <li><a href="#">Портфоліо</a></li>
@@ -32,22 +32,23 @@
         </section>
         <!--Особливості-->
         <section>
+            <!--<h2>Переваги нашої компанії</h2>-->
             <ul>
                 <li>
-                    <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
-                    <h3>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</h3>
+                    <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+                    <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                 </li>
                 <li>
-                    <h2>ПУНКТУАЛЬНІСТЬ</h2>
-                    <h3>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</h3>
+                    <h3>ПУНКТУАЛЬНІСТЬ</h3>
+                    <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                 </li>
                 <li>
-                    <h2>ПЛАНУВАННЯ</h2>
-                    <h3>Так само консультація з широким активом значною мірою зумовлює.</h3>
+                    <h3>ПЛАНУВАННЯ</h3>
+                    <p>Так само консультація з широким активом значною мірою зумовлює.</p>
                 </li>
                 <li>
-                    <h2>СУЧАСНІ ТЕХНОЛОГІЇ</h2>
-                    <h3>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</h3>
+                    <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                    <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                 </li>
             </ul>
         </section>
@@ -91,7 +92,7 @@
 
     </main>
     <footer>
-        <a href="#" lang="en"><span>Web</span>Studio</a>
+        <a href="./index.html" lang="en"><span>Web</span>Studio</a>
         <address>
             <ul>
                 <li>
